--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   r2dbc:
-    url: r2dbc:postgresql://localhost:5432/spring_reactive
+    url: r2dbc:postgresql://localhost:5433/spring_reactive
     username: postgres
     password: 1234
-  flyway:
-    user: postgres
-    password: 1234
-    url: r2dbc:postgresql://localhost:5432/spring_reactive
+#  flyway:
+#    url: jdbc:postgresql://localhost:5433/spring_reactive
+#    user: postgres
+#    password: 1234
